# kinetica-api-cpp

./: .gitignore  CHANGELOG  CHANGELOG-FUNCTIONS.md  CHANGELOG.md  CMakeLists.txt  GIT_BRANCH.txt  README  README.md  VERSION
example/: CMakeLists.txt  gpudb-api-example.cpp  gpudb-join-example.cpp  makefile  test_multihead_ingest.cpp  test_multihead_ingest_no_clientside_pk_validations.cpp
example/dev_guide/: dev_guide.cpp  makefile
gpudb/: Avro.cpp  Avro.hpp  CMakeLists.txt  ColumnProperties.cpp  ColumnProperties.h  DynamicTableRecord.cpp  DynamicTableRecord.hpp  FailbackPollerService.cpp  FailbackPollerService.hpp  GPUdb.cpp  GPUdb.hpp  GPUdbException.cpp  GPUdbException.hpp  GPUdbFunctions.cpp  GPUdbFunctions.hpp  GPUdbIngestor.cpp  GPUdbIngestor.hpp  GPUdbTemplates.hpp  GenericRecord.cpp  GenericRecord.hpp  Http.cpp  Http.hpp  RecordRetriever.cpp  RecordRetriever.hpp  Type.cpp  Type.hpp  VERSION
gpudb/protocol/: EndpointKeywords.cpp  EndpointKeywords.h  GPUdbProtocol.h  admin_add_host.h  admin_add_node.h  admin_add_ranks.h  admin_alter_configuration.h  admin_alter_host.h  admin_alter_jobs.h  admin_alter_shards.h  admin_backup_begin.h  admin_backup_end.h  admin_delete_node.h  admin_get_shard_assignments.h  admin_ha_offline.h  admin_ha_refresh.h  admin_offline.h  admin_rebalance.h  admin_remove_host.h  admin_remove_node.h  admin_remove_ranks.h  admin_repair_table.h  admin_replace_tom.h  admin_send_alert.h  admin_set_shard_assignments.h  admin_show_alerts.h  admin_show_cluster_operations.h  admin_show_configuration.h  admin_show_jobs.h  admin_show_shards.h  admin_shutdown.h  admin_switchover.h  admin_verify_db.h  aggregate_convex_hull.h  aggregate_group_by.h  aggregate_histogram.h  aggregate_k_means.h  aggregate_min_max.h  aggregate_min_max_geometry.h  aggregate_statistics.h  (+196 more)
gpudb/utils/: GPUdbMultiHeadIOUtils.cpp  GPUdbMultiHeadIOUtils.h  MurmurHash3.cpp  Utils.h
project/: GPUdbCppAPI.sln  README.txt
project/gpudbapidll/: gpudbapidll.sln  gpudbapidll.vcxproj
project/gpudbapidll/gpudbapidll/: gpudbapidll.vcxproj
project/gpudbapidll/x64/Debug/: README.JAZZ
project/gpudbapiexe/: gpudbapiexe.vcxproj  gpudbapiexe.vcxproj.filters  packages.config
project/gpudbapiexe/gpudbapiexe/: ReadMe.txt  gpudbapiexe.cpp  gpudbapiexe.vcxproj  gpudbapiexe.vcxproj.filters  packages.config  stdafx.cpp
project/gpudbapilib/: ReadMe.txt  gpudbapilib.vcxproj  gpudbapilib_vs2015.vcxproj  gpudbapilib_vs2015.vcxproj.filters  packages.config
src/: Avro.cpp  Avro.hpp  CMakeLists.txt  DynamicTableRecord.cpp  GPUdb.cpp  GPUdb.hpp  GPUdbException.hpp  GPUdbFunctions.cpp  GPUdbFunctions.hpp  GPUdbIngestor.cpp  GPUdbTemplates.hpp  Type.cpp  Type.hpp  VERSION
src/protocol/: EndpointKeywords.cpp  EndpointKeywords.h  GPUdbProtocol.h  admin_delete_node.h  admin_get_shard_assignments.h  admin_offline.h  admin_set_shard_assignments.h  admin_shutdown.h  admin_verify_db.h  aggregate_convex_hull.h  aggregate_group_by.h  aggregate_histogram.h  aggregate_k_means.h  aggregate_min_max.h  aggregate_statistics.h  aggregate_statistics_by_range.h  aggregate_unique.h  alter_system_properties.h  alter_table.h  alter_table_metadata.h  alter_table_properties.h  clear_table.h  clear_table_monitor.h  clear_trigger.h  create_join_table.h  create_table.h  create_table_monitor.h  create_trigger_by_area.h  create_trigger_by_range.h  create_type.h  delete_records.h  execute_proc.h  filter.h  filter_by_area.h  filter_by_box.h  filter_by_geometry.h  filter_by_list.h  filter_by_radius.h  filter_by_range.h  filter_by_series.h  (+31 more)
